--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.10",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "express-validator": "^5.0.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
@@ -32,9 +33,11 @@
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.2.0",
     "knex": "^0.14.4",
-    "material-ui": "^1.0.0-beta.37",
+    "lodash": "^4.17.5",
+    "material-ui": "^1.0.0-beta.41",
     "moment": "^2.12.0",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.10.2",
     "nodemailer": "^2.3.0",
     "normalizr": "^3.2.4",
@@ -45,6 +48,7 @@
     "react-redux": "^5.0.7",
     "react-router": "~3.0.0",
     "react-semantic-ui": "^0.2.0",
+    "react-spinners": "^0.3.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "recompose": "^0.26.0",
