--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "build": "webpack --display-error-details",
     "postinstall": "npm run build",
-    "start": "node server.js && webpack --display-error-details",
+    "start": "webpack -p --config webpack.prod.config.js --progress",
     "migrate": "knex migrate:latest"
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "add": "^2.0.6",
     "async": "^1.5.2",
     "babel-core": "^6.7.2",
@@ -41,6 +42,7 @@
     "mysql": "^2.10.2",
     "nodemailer": "^2.3.0",
     "normalizr": "^3.2.4",
+    "pg": "^7.4.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-cookie": "^0.4.5",
@@ -72,6 +74,7 @@
   },
   "devDependencies": {},
   "engines": {
-    "node": "6.1.0"
+    "node": "8.9.4",
+    "yarn": "1.3.2"
   }
 }
