--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My app description",
   "scripts": {
     "build": "webpack --display-error-details",
-    "postinstall": "npm run build",
+    "postinstall": "yarn run build",
     "start": "node server.js && webpack --display-error-details",
     "migrate": "knex migrate:latest"
   },
@@ -21,6 +21,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.12.1",
+    "bookshelf-cascade-delete": "^2.0.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
     "css-loader": "^0.28.10",
