--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bookshelf-cascade-delete": "^2.0.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
@@ -46,6 +46,7 @@
     "pg": "^7.4.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-compose": "^2.0.0",
     "react-cookie": "^0.4.5",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -54,7 +55,7 @@
     "react-spinners": "^0.3.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "recompose": "^0.26.0",
+    "recompose": "^0.27.0",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
@@ -63,7 +64,7 @@
     "request": "^2.69.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "typeface-roboto": "^0.0.54",
     "url-loader": "^1.0.1",
     "webpack": "~3.0.0",
