--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.2.0",
     "knex": "^0.14.4",
+    "less-loader": "^4.1.0",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.41",
     "moment": "^2.12.0",
@@ -67,7 +68,7 @@
     "style-loader": "^0.21.0",
     "typeface-roboto": "^0.0.54",
     "url-loader": "^1.0.1",
-    "webpack": "~3.0.0",
+    "webpack": "3.4.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
