--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "add": "^2.0.6",
     "async": "^1.5.2",
     "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.12.1",
@@ -29,7 +29,7 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-validator": "^5.0.3",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "global": "^4.3.2",
     "jade": "^1.11.0",
@@ -67,8 +67,9 @@
     "semantic-ui-react": "^0.78.3",
     "style-loader": "^0.21.0",
     "typeface-roboto": "^0.0.54",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "3.4.1",
+    "webpack": "^4.6.0",
     "webpack-cli": "^2.0.11",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
