--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "scripts": {
     "build": "webpack --display-error-details",
     "postinstall": "yarn run build",
-    "start": "node server.js && webpack --display-error-details",
-    "migrate": "knex migrate:latest"
+    "start": "webpack --display-error-details && babel-node server.js"
   },
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
     "add": "^2.0.6",
     "async": "^1.5.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.7.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.7.2",
+    "babel-preset-2017": "^0.0.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.12.1",
@@ -28,10 +31,13 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "express-graphql": "^0.6.12",
     "express-validator": "^5.0.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "global": "^4.3.2",
+    "graphiql": "^0.11.11",
+    "graphql": "^0.13.2",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.2.0",
     "knex": "^0.14.4",
@@ -76,9 +82,10 @@
     "whatwg-fetch": "^0.11.0",
     "yarn": "^1.5.1"
   },
-  "devDependencies": {},
-  "engines": {
-    "node": "8.9.4",
-    "yarn": "1.3.2"
-  }
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "devDependencies": {}
 }
